# notification-platform

./: .env.example  .gitignore  BUNDLE_F_G_README.md  CLAUDE.md  DEPLOYMENT_FIX.md  DEPLOY_TO_EC2.md  DOCKER.md  DOCKERIGNORE_ANALYSIS.md  HTTPS_SETUP.md  OOM_FIX.md  PRODUCTION_IMPROVEMENTS_SUMMARY.md  PRODUCTION_READINESS.md  README.md  TESTING.md  TEST_COMMANDS.md  TEST_SUMMARY.md  add-swap.sh  check-services.sh  diagnose-ec2.sh  diagnose-frontend.sh  docker-compose.dev.yml  docker-compose.yml  fix-rabbitmq.sh  logs.sh  pytest.ini  run-tests.sh  setup-ssl.sh  start-all.sh  start-docker.sh  status.sh  stop-all.sh
bemby-notify-js/: package-lock.json  package.json  tsconfig.json
customer-service/: Dockerfile  pytest.ini  requirements.txt
email-sender/: .dockerignore  Dockerfile  pytest.ini  requirements.txt
frontend/: .dockerignore  Dockerfile  README.md  nginx-ssl.conf  nginx.conf  package-lock.json  package.json  vite.config.ts
locust/: Dockerfile  locustfile.py
notification-platform-sdk/: INSTALLATION.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  setup.py
notification-platform-sdk/examples/: basic_usage.py  error_handling.py  schedules_example.py  templates_example.py
notification-platform-sdk/notification_platform_sdk/: __init__.py  base_client.py  client.py  exceptions.py
notification-platform-sdk/notification_platform_sdk/resources/: __init__.py  customers.py  notifications.py  schedules.py  templates.py
notification-service/: Dockerfile  alembic.ini  create_admin.py  pytest.ini  requirements-test.txt  requirements.txt
prometheus/: prometheus.yml
scheduler-service/: .dockerignore  .env.example  Dockerfile  pytest.ini  requirements-test.txt  requirements.txt
sms-sender/: Dockerfile  (+1 more)
(+150 files in other folders)
